src/objects/TDR_Default_Target__c.object
<CustomObject>
    <description>Set the default target for a region for a given time period and a given start date. Will always take the most recent target set for a given period.</description>
    <fields>
        <fullName>Corporate_Sales_Calls__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The default target for corporate sales calls made by a TDR in a given time period</description>
        <label>Corporate Sales Calls</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The default number of customer support calls to make in this time frame for this region</description>
        <label>Customer Support</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MM_Agent_Full_Report__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The default number of MM agent full reports to be made by a TDR in the given time period</description>
        <label>MM Agent Full Report</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MM_Agent_Short_Report__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The target number of MM Agent short reports a TDR needs to do in a given time</description>
        <label>MM Agent Short Report</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of marketing events that a TDR is supposed to do by default in this time period for the given region</description>
        <label>Marketing Event</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The default target for other TDR activities for the given time period in this region</description>
        <label>Other</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PA_Products__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PA_Products</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region that this target is for</description>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>TDR Default Targets</relationshipLabel>
        <relationshipName>TDR_Default_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_Sales_Calls__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The target number of sales calls to schools for a TDR in a given period</description>
        <label>School Sales Calls</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date that the target comes in to force</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of target that this is for</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>DAILY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEEKLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTHLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEARLY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TDR Default Target</label>
    <nameField>
        <displayFormat>TDR-T-{YY}-{MM}-{DD}-{00000000}</displayFormat>
        <label>TDR Default Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TDR Default Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>